--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^3.5.0",
     "jquery": "^3.2.1",
     "json-server": "^0.11.2",
+    "materialize-css": "^0.100.2",
     "promise-polyfill": "^6.0.2",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0",
